js if else for output & hover for menu

--- a/order.html
+++ b/order.html
@@ -19,7 +19,7 @@
 
 <body id="Order">
   <div class="container text-center">
-    <div class="container" style="margin-top: 15%;">
+    <div class="container" style="margin-top: 10%;">
       <div class="card">
         <div class="card text-center">
           <div class="card-header">
@@ -74,9 +74,9 @@
                   <option value="60">Stoney</option>
                 </select>
                 <br>
-                <input class="form-control" type="text" name="pizza" id="quan" placeholder="0" max="" min="0">
+                <input class="form-control" type="text" name="pizza" id="quantity" placeholder="0" max="" min="0">
                 <br>
-                <a href="#" class="btn btn-primary" onclick="getTotalAmount()"><i class="fas fa-shopping-bag"></i>
+                <a href="#" class="btn btn-primary" onclick="output()"><i class="fas fa-shopping-bag"></i>
                   checkout</a>
               </form>
             </p>
