--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
 <body id="Menu">
     <div class="container-fluid text-center">
         <div class="container" style="margin-top: 1%;">
-            <div class="card bg-secondary special-color-dark ">
+            <div class="card">
                 <div class="card text-center">
                     <div class="card-header">
                       <ul class="nav nav-tabs card-header-tabs">
@@ -45,7 +45,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="images/firepizza.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/1.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -61,7 +61,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/3.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -78,7 +78,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/9.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -102,7 +102,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/5.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -119,7 +119,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/4.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -136,7 +136,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/2.jpg" style="height: 70px; width: 70px;"alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -160,7 +160,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/6.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -177,7 +177,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/7.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
@@ -195,7 +195,7 @@
                                     <div class="menu-content">
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                                <div class="dish-img"><a href="#"><img src="http://via.placeholder.com/70x70" alt="" class="img-circle"></a></div>
+                                                <div class="dish-img"><a href="#"><img src="images/8.jpg" style="height: 70px; width: 70px;" alt="" class="img-circle"></a></div>
                                             </div>
                                             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                                                 <div class="dish-content">
