added bootbox for alert and prompt popups

--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
                       </ul>
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">MENU</h5>
+                      <h5 class="card-title"><i class="fas fa-clipboard-list">MENU</i></h5>
                       <hr>
                       <p class="card-text">
 
