fixes to bootbox modal pop up

--- a/menu.html
+++ b/menu.html
@@ -38,7 +38,7 @@
                       <p class="card-text">
 
                         <div class="row">
-                            <!-- starter -->
+                            <!-- small-->
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 mb40">
                                 <div class="menu-block">
                                     <h3 class="menu-title">Small</h3>
@@ -94,8 +94,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- /.starter -->
-                            <!-- Soup -->
+                            
+                            <!-- medium -->
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 mb40">
                                 <div class="menu-block">
                                     <h3 class="menu-title">Medium</h3>
@@ -152,8 +152,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- /.soup -->
-                            <!-- main course -->
+                            
+                            <!-- large -->
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 mb40">
                                 <div class="menu-block">
                                     <h3 class="menu-title">Large</h3>
