--- a/order.html
+++ b/order.html
@@ -45,37 +45,37 @@
                 <!-- pizza size -->
                 <select  class="form-control" id="size">
                   <option value="0">--Choose pizza size--</option>
-                  <option value="30">Small</option>
-                  <option value="40">Medium</option>
-                  <option value="50">Large</option>
+                  <option value="800">Small</option>
+                  <option value="1200">Medium</option>
+                  <option value="1500">Large</option>
                 </select>
                 <br>
                 <!-- pizza toppings -->
                 <select  class="form-control" id="toppings">
                   <option value="0">--Choose type of topping--</option>
-                  <option value="30">Peperoni</option>
-                  <option value="40">Mashroom</option>
-                  <option value="50">Ovacado</option>
-                  <option value="60">Black Olives</option>
+                  <option value="350">Peperoni</option>
+                  <option value="250">Mashroom</option>
+                  <option value="100">Ovacado</option>
+                  <option value="300">Black Olives</option>
                 </select>
                 <br>
                 <!-- crust -->
                 <select  class="form-control" id="crust">
                   <option value="0">--Crust or no crust--</option>
                   <option value="0">No Crust</option>
-                  <option value="30">Crust ($3)</option>
+                  <option value="300">Crust ($3)</option>
                 </select>
                 <br>
                 <!-- type of drink -->
                 <select  class="form-control" id="drinks">
                   <option value="0">--Choose your drink--</option>
-                  <option value="30">CocaCola</option>
-                  <option value="40">Fanta</option>
-                  <option value="50">Sprite</option>
-                  <option value="60">Stoney</option>
+                  <option value="100">CocaCola</option>
+                  <option value="100">Fanta</option>
+                  <option value="100">Sprite</option>
+                  <option value="100">Stoney</option>
                 </select>
                 <br>
-                <input class="form-control" type="text" name="pizza" id="quantity" placeholder="0" max="" min="0">
+                <input class="form-control" type="number" name="pizza" id="quantity" placeholder="0" max="" min="0">
                 <br>
                 <a href="#" class="btn btn-primary" onclick="output()"><i class="fas fa-shopping-bag"></i>
                   checkout</a>
